assets/css/amp-editor-story-blocks.css
/* ... */
/* Hide inserter inside of the page when block navigator is visible */
@media (min-width: 961px) {
	div[data-type="amp/amp-story-page"] .block-list-appender {
		display: none;
	}

	.post-type-amp_story .amp-grid-template .editor-block-list__layout:first-of-type {
		padding-top: 24px;
	}
}

/*
 * 7. Block Navigation and Page Carousel

 * Hides the toggler and shows the navigator by default on large screens.
 */

@media( max-width: 960px) {
	.editor-block-list__block-edit > div > .editor-selectors {
		display: none;
	}
}

@media (min-width: 961px) {
	.post-type-amp_story .editor-post-title__input {
		text-align: center;
	}

	.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout {
		padding-left: 15px;
		padding-right: 15px;
		display: flex;
		align-items: center;
		overflow: hidden;
		transform: none;
		transition: transform 300ms linear;
	}

	.editor-block-list__layout div[data-type="amp/amp-story-page"] {
		flex: 0 0 auto;
		position: relative;
		transition: border 300ms linear;
	}

	.editor-block-list__layout div[data-type="amp/amp-story-page"] + div[data-type="amp/amp-story-page"] {
		margin-left: 1em;
	}

	.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-active {
		border-color: #ccc;
	}

	.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-active::after {
		background-color: #ccc;
	}

	.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-inactive {
		opacity: .5;
		pointer-events: none;
	}

	.editor-block-list__layout div[data-type="amp/amp-story-page"] .amp-story-page-number {
		position: absolute;
		top: -3em;
		text-transform: uppercase;
		font-weight: 600;
		font-size: 12px;
		color: #666;
		letter-spacing: 1px;
	}

	.amp-story-editor-carousel-navigation {
		display: flex;
		justify-content: space-between;
		margin-top: 2em;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list {
		flex: 1;
		display: flex;
		margin: 0;
		padding: 0;
		list-style-type: none;
		justify-content: center;
		max-width: 338px;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list .amp-story-editor-carousel-item {
		flex: 1;
		height: .5em;
		max-width: 5em;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list .amp-story-editor-carousel-item + .amp-story-editor-carousel-item {
		margin-left: 1em;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list button {
		background: #eff0f1;
		width: 100%;
		height: 100%;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list button:hover,
	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list button:focus {
		background: #e0e0e0;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list .amp-story-editor-carousel-item--active button {
		background: #666;
	}

	.components-icon-button.editor-block-navigation {
		display: none;
	}

	#amp-root-navigation {
		position: absolute;
		left: 5px;
		top: 218px;
		width: 300px;
		z-index: 80;
		list-style-type: none;
		padding: 0;
		margin: 0;
	}

	#amp-root-navigation .editor-inserter {
		position: absolute;
		bottom: 100%;
		left: 0;
		width: 100%;
	}

	.post-type-amp_story #amp-root-navigation .components-popover:not(.is-mobile).is-center .components-popover__content {
		transform: translateX( -13% );
	}

	.post-type-amp_story.folded #amp-root-navigation .components-popover:not(.is-mobile):not(.is-middle).is-right .components-popover__content {
		margin-left: -50px;
	}

	/*
		Legend of the magic numbers:
		Sidebar
			Expanded - 160px wide
			Folded - 36px wide
		Settings
			Shown - 280px wide
		Content - 383px (including 15px padding)
		Block Navigation - <= 300px
	*/

	/* Navigator in the context of the open sidebar, settings hidden. */
	.post-type-amp_story .edit-post-layout #amp-root-navigation {
		max-width: calc( 100vw - 160px - 383px );
	}

	.post-type-amp_story .edit-post-layout .editor-writing-flow > div > div {
		grid-template-columns: auto minmax( 368px, calc( 100vw - 160px - 315px ) );
	}

	/* Navigator in the context of minimum available space - open sidebar, settings shown. */
	.post-type-amp_story .edit-post-layout.is-sidebar-opened #amp-root-navigation {
		max-width: calc( 100vw - 280px - 160px - 383px );
	}

	.post-type-amp_story .edit-post-layout.is-sidebar-opened .editor-writing-flow > div > div {
		grid-template-columns: auto minmax( 368px, calc( 100vw - 280px - 160px - 315px ) );
	}

	/* Navigator in the context of folded sidebar, settings hidden. */
	.post-type-amp_story.folded #amp-root-navigation {
		max-width: calc( 100vw - 36px - 383px );
	}

	.post-type-amp_story.folded .edit-post-visual-editor .editor-writing-flow > div > div {
		grid-template-columns: auto minmax( 368px, calc( 100vw - 36px - 315px ) );
	}

	/* Navigator in the context of folded sidebar, settings shown. */
	.post-type-amp_story.folded .edit-post-layout.is-sidebar-opened #amp-root-navigation {
		max-width: calc( 100vw - 36px - 280px - 383px );
	}

	.post-type-amp_story.folded .edit-post-layout.is-sidebar-opened .editor-writing-flow > div > div {
		grid-template-columns: auto minmax( 368px, calc( 100vw - 36px - 280px - 315px ) );
	}

	#amp-root-navigation .editor-block-navigation__list {
		list-style-type: none;
	}

	#amp-root-navigation .components-icon-button .dashicon {
		margin-right: 5px;
	}

	.block-navigation {
		background: #fff;
		border: 1px solid #eee;
	}

	.block-navigation .component-editor__selector button {
		background: no-repeat left top;
		padding-left: 37px;
		height: 40px;
		margin: 1px 0 1px 4px;
	}

	.block-navigation .component-editor__selector .components-button:focus {
		box-shadow: none;
	}

	.post-type-amp_story .components-range-control__number {
		width: 60px;
	}
}

/*
 * 8. Block mover
 * Disable the block mover at all times.
 */

.post-type-amp_story .editor-block-mover {
	display: none !important;
}

/*
 * 9. General block editor components
 */

.editor-amp-story-page-background {
	display: block;
}
/* ... */

